chore: Updating module do v4 version with the SeaweedFS implementation and rename project to reporter.
BREAKING CHANGE: Migration of Minio to SeaweedFS and rename project to reporter.
