# components/manager/api/swagger.yaml
@@ -7,7 +7,7 @@ definitions:
         additionalProperties:
           additionalProperties:
             additionalProperties:
-              $ref: '#/definitions/github_com_LerianStudio_reporter_v3_pkg_model.FilterCondition'
+              $ref: '#/definitions/github_com_LerianStudio_reporter_v4_pkg_model.FilterCondition'
             type: object
           type: object
         type: object
@@ -65,7 +65,7 @@ definitions:
         example: account
         type: string
     type: object
-  github_com_LerianStudio_reporter_v3_pkg_model.FilterCondition:
+  github_com_LerianStudio_reporter_v4_pkg_model.FilterCondition:
     properties:
       between:
         description: |-
@@ -123,7 +123,7 @@ definitions:
         items: {}
         type: array
     type: object
-  github_com_LerianStudio_reporter_v3_pkg_mongodb_report.Report:
+  github_com_LerianStudio_reporter_v4_pkg_mongodb_report.Report:
     properties:
       completedAt:
         type: string
@@ -135,7 +135,7 @@ definitions:
         additionalProperties:
           additionalProperties:
             additionalProperties:
-              $ref: '#/definitions/github_com_LerianStudio_reporter_v3_pkg_model.FilterCondition'
+              $ref: '#/definitions/github_com_LerianStudio_reporter_v4_pkg_model.FilterCondition'
             type: object
           type: object
         type: object
@@ -154,7 +154,7 @@ definitions:
       updatedAt:
         type: string
     type: object
-  github_com_LerianStudio_reporter_v3_pkg_mongodb_template.Template:
+  github_com_LerianStudio_reporter_v4_pkg_mongodb_template.Template:
     properties:
       createdAt:
         example: "2021-01-01T00:00:00Z"
@@ -193,7 +193,7 @@ info:
   description: This is a swagger documentation for Reporter
   termsOfService: http://swagger.io/terms/
   title: Reporter
-  version: 3.0.0
+  version: 4.0.0
 paths:
   /v1/data-sources:
     get:
@@ -314,7 +314,7 @@ paths:
             - properties:
                 items:
                   items:
-                    $ref: '#/definitions/github_com_LerianStudio_reporter_v3_pkg_mongodb_report.Report'
+                    $ref: '#/definitions/github_com_LerianStudio_reporter_v4_pkg_mongodb_report.Report'
                   type: array
                 limit:
                   type: integer
@@ -361,7 +361,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/github_com_LerianStudio_reporter_v3_pkg_mongodb_report.Report'
+            $ref: '#/definitions/github_com_LerianStudio_reporter_v4_pkg_mongodb_report.Report'
         "400":
           description: Bad Request
           schema:
@@ -404,7 +404,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_LerianStudio_reporter_v3_pkg_mongodb_report.Report'
+            $ref: '#/definitions/github_com_LerianStudio_reporter_v4_pkg_mongodb_report.Report'
         "400":
           description: Bad Request
           schema:
@@ -506,7 +506,7 @@ paths:
             - properties:
                 items:
                   items:
-                    $ref: '#/definitions/github_com_LerianStudio_reporter_v3_pkg_mongodb_template.Template'
+                    $ref: '#/definitions/github_com_LerianStudio_reporter_v4_pkg_mongodb_template.Template'
                   type: array
                 limit:
                   type: integer
@@ -562,7 +562,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/github_com_LerianStudio_reporter_v3_pkg_mongodb_template.Template'
+            $ref: '#/definitions/github_com_LerianStudio_reporter_v4_pkg_mongodb_template.Template'
         "400":
           description: Bad Request
           schema:
@@ -638,7 +638,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_LerianStudio_reporter_v3_pkg_mongodb_template.Template'
+            $ref: '#/definitions/github_com_LerianStudio_reporter_v4_pkg_mongodb_template.Template'
         "400":
           description: Bad Request
           schema:
@@ -695,7 +695,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_LerianStudio_reporter_v3_pkg_mongodb_template.Template'
+            $ref: '#/definitions/github_com_LerianStudio_reporter_v4_pkg_mongodb_template.Template'
         "400":
           description: Bad Request
           schema:
